--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #15212F;
   font-family:Tilt Warp, sans-serif;
+  color: white
 }
 
 code {
