--- a/src/components/componentStyles/NavBar.css
+++ b/src/components/componentStyles/NavBar.css
@@ -4,12 +4,14 @@
     width: 100vw;
     display: flex;
     align-items: center;
+    z-index: 1;
 }
+
 .navBar {
     display: flex;
     flex-direction: row;
     align-items: center;
-    height: 10vh;
+    height: 5vw;
     justify-content: space-between;
     padding: 0 3%;
     width: 60%;
@@ -17,20 +19,22 @@
     margin-right: auto;
     border: none;
     border-radius: 4vw;
+    border-bottom: solid 2px #15212F;
+    border-top: solid 2px #15212F;
     background-color: white;
     position: relative;
     bottom: -50%;
     font-size: 1.5vw;
 }
 
-.navBar p{
+.navBarTag{
     font-family: Tilt Warp;
     font-weight: 100;
     font-size: 1.2vw;
     color: #15212F;
 }
 
-.navBar p:hover{
+.navBarTag:hover{
     cursor: pointer;
     transition: 0.5s;
     font-size: 2vw;
@@ -39,11 +43,11 @@
 .navBar input{
     font-family: Tilt Warp;
     font-weight: 250;
-    border-radius: 15px;
-    border-color: #15212F;
+    border-radius: 30px;
+    border: 1px solid #15212F;
     width: 50%;
     height: 30%;
-    padding: .5% 2%;
+    padding: 1% 2%;
     font-size: 1.5vw;
 }
 
@@ -66,11 +70,22 @@
     margin-right: 5%;
     right: 0;
     cursor: pointer;
-    top: .5%;
 }
 
 .login:hover{
     cursor: pointer;
     transition: 0.5s;
     font-size: 2.2vw;
+}
+
+.searchWrapper{
+    height: 50vh;
+    margin-top: 43.5vh;
+}
+
+.searchContainer{
+    background-color: white;
+    width: 30vw;
+    margin-left: 1.5vw;
+    border: 1px solid #15212F;
 }
