--- a/src/screens/screenStyles/Login.css
+++ b/src/screens/screenStyles/Login.css
@@ -5,7 +5,7 @@
     text-align: center;
     align-items: center;
     border-radius: 15px;
-    width: 50vw;
+    width: 60%;
     margin-right: 10vw;
 }
 
@@ -33,9 +33,10 @@
     font-size: 3vw;
     font-weight: 700;
     color: #15212F;
+    margin-top: 2vw;
 }
 
-button{
+.loginButton{
     background-color: #15212F;
     border: 1px solid #15212F;
     width: 20vw;
@@ -43,17 +44,29 @@ button{
     color: white;
     cursor:  pointer;
     margin-top: 2vw;
-    margin-bottom: 2vw;
+    margin-bottom: .3vw;
     font-family: Tilt Warp;
     font-size: 1.5vw;
     border-radius: 15px;
 }
 
-button:hover{
+.loginButton:hover{
     background-color: white;
     color: #15212F;
     transition: 0.5s;
 }
+
+.register{
+    color: #15212F;
+    font-weight:10;
+    margin-bottom: 1vw;
+}
+
+.register:hover{
+    cursor: pointer;
+}
+
+
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
