--- a/src/screens/screenStyles/ProjectDetails.css
+++ b/src/screens/screenStyles/ProjectDetails.css
@@ -6,19 +6,96 @@
 
 .projectTitle{
     margin-left: 100;
-    font-size: 6vh;
-    margin: 0
+    font-size: 2.8vw;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .projectDescription{
-    font-size: 2.1vh;
-    margin-left: auto;
+    font-size:1.1vw;
     font-family:sans-serif;
-    
+    text-justify: distribute
 }
 
 .membersContainer{
     display: flex;
     flex-direction: row;
     justify-content:space-around;
+}
+
+.pDetails{
+    font-size: 1.5vw;
+}
+
+.pItem{
+    font-size: 1.2vw;
+}
+.commentButton{
+    background-color: #4FB993;
+    border: 1px solid #4FB993;
+    width: 18%;
+    padding: 1vw 1vw 1vw 1vw;
+    color: white;
+    cursor:  pointer;
+    font-family: Tilt Warp;
+    font-size: 1.2vw;
+    border-radius: 5px;
+    margin-top: 2vh;
+}
+
+.commentButton:hover{
+    background-color: white;
+    color: #4FB993;
+    transition: 0.5s;
+}
+
+.cancelCommentButton
+{
+    background-color: #FC4949;
+    border: 1px solid #FC4949;
+    width: 18%;
+    padding: 1vw 1vw 1vw 1vw;
+    color: white;
+    cursor:  pointer;
+    font-family: Tilt Warp;
+    font-size: 1.2vw;
+    border-radius: 5px;
+    margin-top: 2vh;
+    margin-left: 2vw;
+}
+
+.cancelCommentButton:hover{
+    background-color: white;
+    color: #FC4949;
+    transition: 0.5s;
+}
+
+.commentArea{
+    font-family:sans-serif;
+    font-size: 1vw;
+    margin-top: .5vw;
+    background-color: white;
+    padding: 1vw 1vw;
+    border-radius: 5px;
+    border: 1px solid #15212F;
+    box-sizing: border-box;
+    margin-bottom: -.5%;
+
+    resize: none;
+    height: 20vh;
+    width:100%;
+    
+}
+
+.selectStatus{
+    font-family:Tilt Warp;
+    font-size: 1.5vw;
+    margin-top: 2vh;
+    background-color: white;
+    padding: 1vw 1vw;
+    border-radius: 5px;
+    border: 1px solid #15212F;
+    box-sizing: border-box;
+    width: 39%
+
 }
